--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,15 +11,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="background-glob"></div>
-    
+
     <nav class="navbar">
         <div class="logo">Portfolio.</div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
+            <li><a href="#vocab">Vocabulary</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -86,6 +89,24 @@
         </div>
     </section>
 
+    <section id="vocab" class="section">
+        <div class="container">
+            <h2 class="section-title">English Vocabulary</h2>
+
+            <div class="vocab-input-box glass">
+                <form id="vocab-form">
+                    <input type="text" id="word-input" placeholder="English Word" required>
+                    <input type="text" id="meaning-input" placeholder="Korean Meaning" required>
+                    <button type="submit" class="btn primary">Add Word</button>
+                </form>
+            </div>
+
+            <div id="vocab-grid" class="vocab-grid">
+                <!-- Cards will be injected here -->
+            </div>
+        </div>
+    </section>
+
     <section id="contact" class="section">
         <div class="container">
             <h2 class="section-title">Get In Touch</h2>
@@ -102,4 +123,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
